# MSDF-Text-Mesh-Shader

./: CMakeLists.txt  README.md
assets/: font.json  font.rgba
shaders/: lb_glyphlets.frag.glsl  lb_glyphlets.mesh.glsl  lb_parenthesis.frag.glsl  lb_parenthesis.mesh.glsl  mesh_test.frag.glsl  mesh_test.mesh.glsl
src/: main.cpp
src/platform/: Window.cpp  Window.h
src/vk/: ClearRenderer.cpp  ClearRenderer.h  MeshTestPipeline.cpp  MeshTestPipeline.h  MeshTestRenderer.cpp  MeshTestRenderer.h  MsdfAtlas.cpp  MsdfAtlas.h  MsdfFont.cpp  MsdfFont.h  Swapchain.cpp  Swapchain.h  Texture2D.cpp  Texture2D.h  VulkanContext.cpp  VulkanContext.h  VulkanUtils.cpp  VulkanUtils.h
